--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-Flow</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="Styles/nav.css">
 </head>
+
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#">Logo</a></li>
-                <li><a href="#"><button>Sign Up</button></a></li>
+                <li class="logo"><a class="inter-font " href="#">LOGO</a></li>
+                <li><a class="raleway-font" href="#"><button class="button1">Sign Up</button></a></li>
             </ul>
         </nav>
     </header>
-    
+
     <main>
 
     </main>
@@ -23,4 +36,5 @@
 
     </footer>
 </body>
+
 </html>
