--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="Styles/nav.css">
+    <link rel="stylesheet" href="Styles/banner.css">
 </head>
 
 <body>
@@ -26,6 +27,13 @@
                 <li><a class="raleway-font" href="#"><button class="button1">Sign Up</button></a></li>
             </ul>
         </nav>
+
+       <div class="container">
+         <div class="banner raleway-font">
+            <h1>Cool Dark UI Template for Webflow Agencies!</h1>
+            <button class="raleway-font">Stay Focused</button>
+        </div>
+       </div>
     </header>
 
     <main>
