--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="Styles/nav.css">
     <link rel="stylesheet" href="Styles/banner.css">
+    <link rel="stylesheet" href="Styles/action.css">
 </head>
 
 <body>
@@ -36,8 +37,20 @@
        </div>
     </header>
 
-    <main>
-
+    <main class="raleway-font">
+        <section class="ac-sec" >
+           <div class="action">
+             <div class="description">
+                <h3>See It in Action</h3>
+                <p>Explore the live preview and imagine your brand in this bold new look.</p>
+                <button class="button-all">Launch Live Preview</button>
+            </div>
+            
+            <div class="image">
+                <img src="Assets/wc-mini.png" alt="">
+            </div>
+           </div>
+        </section>
     </main>
 
     <footer>
