--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="Styles/nav.css">
     <link rel="stylesheet" href="Styles/banner.css">
     <link rel="stylesheet" href="Styles/action.css">
+    <link rel="stylesheet" href="Styles/prductive-user.css">
 </head>
 
 <body>
@@ -50,6 +51,28 @@
                 <img src="Assets/wc-mini.png" alt="">
             </div>
            </div>
+        </section>
+
+        <section class="prod-user">
+            <div class="user-sec">
+                 <h4>Joined Thousands of Productive Users</h4>
+            <div class="user-data inter-font">
+                
+                <div class="data">
+                    <h1>50K</h1>
+                    <p>Active Users</p>
+                </div>
+                <div class="data">
+                    <h1>2M+</h1>
+                    <p>Focus Sessions</p>
+                </div>
+                <div class="data">
+                    <h1>95%</h1>
+                    <p>Satisfaction Rate</p>
+                </div>
+            </div>
+            </div>
+           
         </section>
     </main>
 
