--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="Styles/banner.css">
     <link rel="stylesheet" href="Styles/action.css">
     <link rel="stylesheet" href="Styles/prductive-user.css">
+    <link rel="stylesheet" href="Styles/intouch.css">
 </head>
 
 <body>
@@ -73,6 +74,29 @@
             </div>
             </div>
            
+        </section>
+
+        <section class="get-in-touch">
+            <div class="touch">
+                <div class="text-sec">
+                    <h3>Let’s Get in Touch</h3>
+                </div>
+                
+                <div class="form-sec">
+                    <form class="inter-font" action="">
+                        <label for="email">Email</label><br>
+                        <input type="email" placeholder="example@email.com">
+                        <label for="">Name</label><br>
+                        <input type="text" placeholder="full name">
+                        <label for="">Message</label><br>
+                        <textarea class="inter-font" name="" id="" cols="60" rows="10">write your message...</textarea>
+                        <button class="button-all">
+                            Get in Touch
+                        </button>
+                    </form>
+                </div>
+            </div>
+
         </section>
     </main>
 
