added footer section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="Styles/action.css">
     <link rel="stylesheet" href="Styles/prductive-user.css">
     <link rel="stylesheet" href="Styles/intouch.css">
+    <link rel="stylesheet" href="Styles/footer.css">
 </head>
 
 <body>
@@ -100,8 +101,26 @@
         </section>
     </main>
 
-    <footer>
-
+    <footer class="inter-font-2">
+        <div class="foot">
+            <div>
+                <h1>
+                LOGO
+            </h1>
+            <p>
+                Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.
+            </p>
+            <div class="foot-links">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">How it Works</a></li>
+                    <li><a href="#">Services</a></li>
+                </ul>
+            </div>
+            </div>
+            
+        </div>
     </footer>
 </body>
 
