did some small tweaks

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                         <label for="">Name</label><br>
                         <input type="text" placeholder="full name">
                         <label for="">Message</label><br>
-                        <textarea class="inter-font" name="" id="" cols="60" rows="10">write your message...</textarea>
+                        <textarea class="inter-font-2" name="" id="" cols="60" rows="10">write your message...</textarea>
+                         <!-- <input class="textarea-new" type="message" placeholder="write your message..."> -->
                         <button class="button-all">
                             Get in Touch
                         </button>
